Add random noise to the training and test datasets and report the accuracy

--- a/1.ipynb
+++ b/1.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled1.ipynb",
+      "name": "1.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -157,12 +157,12 @@
       "source": [
         "def plot_image(predicted_classes, indices, y_test ):\n",
         "    plt.figure()\n",
-        "    for i, correct in enumerate(indices[:9]):\n",
+        "    for i, val in enumerate(indices[:9]):\n",
         "        plt.subplot(3,3,i+1)\n",
-        "        plt.imshow(X_test[correct].reshape(28,28), interpolation='none')\n",
-        "        plt.title(\"Predicted {}, Class {}\".format(predicted_classes[correct], y_test[correct]))"
+        "        plt.imshow(X_test[val].reshape(28,28), interpolation='none')\n",
+        "        plt.title(\"Predicted {}, Class {}\".format(predicted_classes[val], y_test[val]))"
       ],
-      "execution_count": 84,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -184,13 +184,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 716
         },
-        "outputId": "787394f6-9d02-430e-a182-c42848d94fd3"
+        "outputId": "28fd97bc-37f2-4048-b169-70d59c93ea6e"
       },
       "source": [
         "X_train, X_test, Y_train, Y_test, y_test = load_fresh_data()\n",
         "print_loaded_images(X_train, Y_train)"
       ],
-      "execution_count": 85,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "display_data",
@@ -260,12 +260,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 716
         },
-        "outputId": "61e46f7b-b4bc-4ba4-9af4-4c6c842aa659"
+        "outputId": "76f3048d-0429-478d-8237-667422b8e97f"
       },
       "source": [
         "plot_image(predicted_classes, correct_indices, y_test )"
       ],
-      "execution_count": 87,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "display_data",
@@ -301,12 +301,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 716
         },
-        "outputId": "b12bce63-1cda-474a-92e7-8dfa26f6b9c8"
+        "outputId": "bd9aabef-90f9-4cc2-fb1a-fc3e7fc318a0"
       },
       "source": [
         "plot_image(predicted_classes, incorrect_indices, y_test )"
       ],
-      "execution_count": 88,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "display_data",
